--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
